# chess-gpt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/samples/: sample_game.pgn
docs/: AGENT_CONTEXT.txt  ARCHITECTURE.md  LLM_PROTOCOL.md  LLM_RULES.md  control.md  encoding.md  examples.md  ingestion.md  interfaces.md  llm-experience.md  query.md  schema.md
schema/: 001_init.sql  002_views.sql  003_decision_audit.sql  003_write_interface.sql  004_decision_audit.sql
scripts/: apply_move.py  import_pgn.py  init_db.py  llm_turn.py  show_position.py  suggest_move.py
src/chessgpt/: cli.py  config.py  errors.py
src/chessgpt/api/: __init__.py  control.py  positions.py  suggestions.py  turns.py
src/chessgpt/bridge/: python_chess.py
src/chessgpt/control/: __init__.py  apply.py
src/chessgpt/db/: audit.py  boards.py  connection.py  edges.py  games.py  positions.py
src/chessgpt/encoding/: board_codec.py  render.py
src/chessgpt/pgn/: ingest.py  parser.py  replay.py
src/chessgpt/policy/: candidates.py
src/chessgpt/query/: exact.py  similar.py  suggest.py
src/chessgpt/utils/: hashing.py
tests/: test_api_control.py  test_api_positions.py  test_api_suggestions.py  test_api_turns.py  test_apply.py  test_ingest.py  test_policy_candidates.py  test_render.py  test_replay.py  test_show_position.py  test_suggest.py
