[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-gpt"
version = "0.1.0"
description = "Lightweight chess position graph and move-memory project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Penuel Lascano" }
]
dependencies = [
  "python-chess>=1.999"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3"
]

[project.scripts]
chessgpt-init-db = "chessgpt.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
